# ctrip

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.txt  MIGRATIONS.md  README.md  alembic.ini  chains.yaml  create_payment.py  docker-compose.yml  ecommerce-plugin.js  index.js  migrate.py  nginx.conf  package-lock.json  package.json  pylint_report.txt  pylint_report_2.txt  pylint_report_3.txt  pylint_report_final.txt  pylint_report_final_v2.txt  pylint_report_last.txt  pyproject.toml  requirements.txt  run_worker.py  server.py  vercel.json
admin-frontend/: .dockerignore  Dockerfile  index.html  metadata.json  nginx.conf  openapi.toon  package.json  pnpm-lock.yaml
admin-frontend/src/: App.tsx  index.css  types.ts  utils.ts
alembic/: env.py  script.py.mako
alembic/versions/: 2026_01_27_1807-5ec6405addd0_initial_database_schema.py  2026_05_17_0001_add_webhook_attempts_table.py  2026_06_05_0001_add_api_keys_table.py  2026_06_05_0002_add_admin_users_table.py  2026_06_18_1857-4a7953cd56f5_initial_schema.py  2026_06_19_0022-99700a096885_initial_baseline.py  2026_06_19_0050-e9553781fc98_changes_in_the_apikey_created_at_for_.py  2026_06_19_0056-24b01b752a5e_changes_in_the_all_created_at_for_make_.py  2026_06_20_0204-1473be26cd60_add_payment_wallets.py  2026_06_20_0242-692467152a11_remived_hdwalleraddress_model.py
app/: main.py
app/api/: __init__.py  admin.py  analytics.py  auth.py  dependencies.py  health.py  ui.py
example/: create_payment.py  rotaing_rpc.py
scripts/: start_worker.sh  test_worker.py
templates/: admin.html  index.html
(+73 files in other folders)
