[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ctrip"
version = "0.1.2"
description = "A multi-chain cryptocurrency payment gateway"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "cTrip Team" }
]
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.45",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "web3>=7.14.0",
    "eth-account>=0.13.7",
    "dramatiq>=2.0.1",
    "redis>=7.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "black",
    "isort",
    "ruff",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []
